--- a/WpfApplication1/WpfApplication1/MainWindow.xaml
+++ b/WpfApplication1/WpfApplication1/MainWindow.xaml
@@ -5,14 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApplication1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="דף ראשי" Height="350" Width="600">
     <Grid>
-        <Button x:Name="button" Content="הכנסת הערה" HorizontalAlignment="Left" Margin="308,91,0,0" VerticalAlignment="Top" Width="118" Height="42" Click="button_Click" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}"/>
-        <Button x:Name="button1" Content="הצגת הערות" HorizontalAlignment="Left" Margin="172,91,0,0" VerticalAlignment="Top" Width="122" Height="42" Click="button1_Click"/>
-        <Button x:Name="button2" Content="טכנאי" HorizontalAlignment="Left" Margin="337,162,0,0" VerticalAlignment="Top" Width="97" Height="35" Click="button2_Click"/>
-        <Button x:Name="button3" Content="הצגת טכנאי" HorizontalAlignment="Left" Margin="172,165,0,0" VerticalAlignment="Top" Width="134" Height="29" Click="button3_Click"/>
-        <Button x:Name="button4" Content="הוספת מעבדה" HorizontalAlignment="Left" Margin="20,102,0,0" VerticalAlignment="Top" Width="99" Click="button4_Click"/>
-        <Button x:Name="button5" Content="הצגת מעבדות" HorizontalAlignment="Left" Margin="20,162,0,0" VerticalAlignment="Top" Width="99" Height="32" Click="button5_Click"/>
+        <Button x:Name="button" Content="הוספת הערה" HorizontalAlignment="Left" Margin="423,26,0,0" VerticalAlignment="Top" Width="118" Height="30" Click="button_Click" Background="{DynamicResource {x:Static SystemColors.ActiveCaptionBrushKey}}"/>
+        <Button x:Name="button1" Content="הצגת הערות" HorizontalAlignment="Left" Margin="423,72,0,0" VerticalAlignment="Top" Width="118" Height="30" Click="button1_Click"/>
+        <Button x:Name="button2" Content="הוספת טכנאי" HorizontalAlignment="Left" Margin="423,116,0,0" VerticalAlignment="Top" Width="118" Height="30" Click="button2_Click"/>
+        <Button x:Name="button3" Content="הצגת טכנאי" HorizontalAlignment="Left" Margin="423,161,0,0" VerticalAlignment="Top" Width="118" Height="30" Click="button3_Click"/>
+        <Button x:Name="button4" Content="הוספת מעבדה" HorizontalAlignment="Left" Margin="423,212,0,0" VerticalAlignment="Top" Width="118" Click="button4_Click" Height="30"/>
+        <Button x:Name="button5" Content="הצגת מעבדות" HorizontalAlignment="Left" Margin="423,261,0,0" VerticalAlignment="Top" Width="118" Height="30" Click="button5_Click" RenderTransformOrigin="0.505,0.553"/>
+        <Button x:Name="button6" Content="יציאה" HorizontalAlignment="Left" Margin="10,274,0,0" VerticalAlignment="Top" Width="114" Height="37" Click="button6_Click"/>
 
     </Grid>
 </Window>
