--- a/WpfApplication1/WpfApplication1/ShowTechnicalSupport.xaml
+++ b/WpfApplication1/WpfApplication1/ShowTechnicalSupport.xaml
@@ -5,11 +5,20 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApplication1"
         mc:Ignorable="d"
-        Title="ShowTechnicalSupport" Height="300" Width="300" Loaded="Window_Loaded">
+        Title="הצגת טכנאי" Height="350" Width="600" Loaded="Window_Loaded" Closing="Window_Closing">
     <Grid>
-        <DataGrid x:Name="dataGrid" HorizontalAlignment="Left" ItemsSource="{Binding}" AutoGenerateColumns="True" Margin="0,10,-0.4,0" VerticalAlignment="Top" Width="294" Height="201"/>
-        <Button x:Name="button" Content="שמירה כל השינוים" HorizontalAlignment="Left" Margin="141,222,0,0" VerticalAlignment="Top" Width="127" Click="button_Click"/>
-        <Button x:Name="button1" Content="חזרה לדף ראשי" HorizontalAlignment="Left" Margin="32,222,0,0" VerticalAlignment="Top" Width="88" Click="button1_Click"/>
+        <DataGrid x:Name="dataGrid" CanUserAddRows="false" FlowDirection="RightToLeft" HorizontalAlignment="Left" ItemsSource="{Binding}" AutoGenerateColumns="False" Margin="0,10,-0.4,0" VerticalAlignment="Top" ColumnWidth="*" Height="200">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="שם טכנאי" Width="*"  
+                                       Binding="{Binding NAME}" 
+                                       IsReadOnly="True"/>
+                <DataGridTextColumn Header="כתובת" Width="*"  
+                                       Binding="{Binding ADDRESS}" 
+                                       IsReadOnly="True"/>
+            </DataGrid.Columns>
+        </DataGrid>
+        <Button x:Name="button" Content="שמירה" HorizontalAlignment="Left" Margin="369,261,0,0" VerticalAlignment="Top" Width="89" Click="button_Click" Height="30"/>
+        <Button x:Name="button1" Content="חזרה" HorizontalAlignment="Left" Margin="161,261,0,0" VerticalAlignment="Top" Width="88" Click="button1_Click" Height="34"/>
 
     </Grid>
 </Window>
